@@ -1,3 +1,4 @@
+5/28/13 update value positions only when type are visible, or scenery barfs
 5/28/13 fix bug in saturation indicator
 5/28/13 fix layout problem with slider range values
 5/28/13 "Solution Volume" slider, with some text layout problems
